syntax = "proto3";

package notes;

option go_package = "./gen/go/notes;notes";

// Notes is service for managing notes.
service Notes {
  rpc AddNote (AddNoteRequest) returns (AddNoteResponse);
  rpc GetNotes (GetNotesRequest) returns (GetNotesResponse);
}


message AddNoteRequest {
  string userID = 1;
  Note note = 2;
}

message AddNoteResponse {
  string id = 1;
  string title = 2; 
  string content = 3;
}

message GetNotesRequest {
  string userID = 1;
}

message GetNotesResponse {
  repeated Note notes = 1;
}

message Note {
  string id = 1;
  string title = 2; 
  string content = 3;
}